10/12/11 relative layout of Molarity tab
10/12/11 move beaker ticks to left side of beaker, closer to volume control
10/12/11 set columns in slider JTextFields based on number formatter pattern
10/12/11 tweak location of precipitate particles to account for thickness of beaker walls
10/12/11 add saturation point indicator to concentration display
10/12/11 adjust gradients on concentration display to account for saturation point
10/12/11 adjust solution color to account for saturation
10/12/11 add tick marks for min/max range labels on sliders
10/12/11 fix units on concentration display
10/12/11 generalize tick mark for reuse in slider
10/12/11 round corners of slider thumbs
10/12/11 use beaker from ph-scale, show/hide tick mark values
10/12/11 add moles-to-particles multiplier for precipitates
10/12/11 create custom formatter with special handling of zero and ints
10/12/11 add tick marks for min/max range labels on concentration display
10/12/11 make labels less verbose on sliders and concentration display
10/12/11 use water color from ph-scale
# 0.00.01 (57499) Oct 11, 2011
10/11/11 dev version to demonstrate functionally-complete "Molarity" tab
10/11/11 add editable text field to sliders
10/11/11 use a commandline arg to show stage bounds, so that it's not distracting in dev versions
10/11/11 implement "show values" for sliders
10/11/11 implement "show values" for concentration display
10/11/11 add colors to Solute combo box
10/11/11 display "Saturated!" when the solution is saturated
10/11/11 show precipitate as a random group of particles at the bottom of the beaker
10/11/11 format solute combo box as "formula: name"
10/11/11 show solute formula on beaker
10/11/11 different solutes have different precipitate sizes
10/10/11 show precipitate numerically
10/10/11 make beaker an observer of solution volume property
10/10/11 add saturation to model
10/10/11 add simple beaker
10/10/11 sliders for molarity tab
10/10/11 concentration display