@@ -5,8 +5,6 @@ DESIGN
 - beaker ticks on left side, near volume slider? 1/2L vs 0.5L?
 
 HIGH
-- show formula on beaker
-- show H2O on beaker when concentration=0
 
 MEDIUM
 
